--- a/templates/gallery/edit_image.html
+++ b/templates/gallery/edit_image.html
@@ -5,8 +5,8 @@
     Éditer une image
 {% endblock %}
 
-{% block headline %}
-    <h2>Éditer une image</h2>
+{% block head-title %}
+    Éditer une image
 {% endblock %}
 
 {% block breadcrumb %}
