--- a/templates/gallery/gallery_details.html
+++ b/templates/gallery/gallery_details.html
@@ -6,8 +6,8 @@
     {{ gallery.title }}
 {% endblock %}
 
-{% block headline %}
-    <h2>{{ gallery.title }}</h2>
+{% block head-title %}
+    {{ gallery.title }}
 {% endblock %}
 
 {% block headline-sub %}
