--- a/templates/gallery/gallery_list.html
+++ b/templates/gallery/gallery_list.html
@@ -4,8 +4,8 @@
    Liste des galeries
 {% endblock %}
 
-{% block headline %}
-   <h2>Liste des galeries</h2>
+{% block head-title %}
+   Liste des galeries
 {% endblock %}
 
 {% block breadcrumb %}
