--- a/templates/gallery/new_gallery.html
+++ b/templates/gallery/new_gallery.html
@@ -5,8 +5,8 @@
     Nouvelle galerie
 {% endblock %}
 
-{% block headline %}
-    <h2>Nouvelle galerie</h2>
+{% block head-title %}
+    Nouvelle galerie
 {% endblock %}
 
 {% block breadcrumb %}
