--- a/templates/gallery/new_image.html
+++ b/templates/gallery/new_image.html
@@ -5,8 +5,8 @@
     Nouvelle image
 {% endblock %}
 
-{% block headline %}
-    <h2>Nouvelle image</h2>
+{% block head-title %}
+    Nouvelle image
 {% endblock %}
 
 {% block breadcrumb %}
