Fix #445 - Ajout du code pour embarque une image
Le code MD d'insertion d'image est ainsi facile à copier vers les forums.
Intégration HTML probablement à revoir.

--- a/templates/gallery/edit_image.html
+++ b/templates/gallery/edit_image.html
@@ -29,5 +29,9 @@
         </div>
     </div>
 </div>
+<p>
+    <strong>Code markdown d'insertion de l'image :</strong> <br>
+    ![{{ image.legend }}]({{ image.physical.url }})
+</p>
 
 {% endblock %}
