fix problem when you edit antispam

--- a/templates/email/confirm_register.html
+++ b/templates/email/confirm_register.html
@@ -7,9 +7,11 @@
 Bonjour <strong>{{username}}</strong>,
 <br />
 <br />
-Merci de votre inscription sur <a href="http://zestedesavoir.com">Zeste de Savoir</a>. Pour activer votre profil, cliquez sur le lien client-dessous:
-<br />
+<p>
+Merci de votre inscription sur <a href="http://zestedesavoir.com">Zeste de Savoir</a>. Pour activer votre profil, cliquez sur le lien ci-dessous:
+
 <a href="{{url}}">{{url}}.</a>
+</p>
 <br />
 Cordialement,
 <br />
