--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -57,7 +57,7 @@ $body-font-family: "Segoe UI", "Roboto", "Trebuchet MS", Helvetica, "Helvetica N
 $primary-color: #084561;
 $secondary-color: #e7ebec;
 $alert-color: scale-color(#f04124, $lightness: 25%);
-// $success-color: #43AC6A;
+$success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
 
