add collaborative wrinting in article

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -635,6 +635,7 @@ h1.forum, h2.forum, h3.forum, h4.forum, h5.forum, h1.member, h2.member, h3.membe
 	font-size: 0.7rem;
 	padding: 5px;
 	text-align: center;
+	word-wrap: break-word;
 }
 
 .avatar-forum {
