--- a/templates/article/view_online.html
+++ b/templates/article/view_online.html
@@ -46,7 +46,12 @@
             <ul>
                 <li><a href="{{ article.get_absolute_url }}" class=" arrow-right blue">Version offline</a></li>
                 <li><a href="{% url "zds.article.views.history_validation" article.pk %}">Historique validation</a></li>
-                <li><button class="secondary tiny" type="submit" name="invalid-article">Confirmer la dépublication</button></li>
+                <li>
+                    <a href="#" data-dropdown="invalid-article" >Dépublier l'article</a>
+                    <div id="invalid-article" class="f-dropdown small content" data-dropdown-content>
+                        <button class="secondary tiny" type="submit" name="invalid-article">Confirmer la dépublication</button>
+                    </div>
+                </li>
             </ul>
         </div>
 
