--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -96,6 +96,7 @@
                                         {{ topic.title }}
                                     </a>
 
+                                    {# TODO: Designer ça #}
                                     <span class="last-answer">
                                         {% with answer=topic.get_last_answer %}
                                             {% if answer %}
