--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -1061,12 +1061,11 @@
 
 
 /* ==============
-    ALL: Main / Forum, MP list
+    ALL: Main / Forum topic, MP list
    ============== */
 .topic-list {
     margin-top: 50px !important;
     margin-bottom: 50px !important;
-    border-top: 1px solid #CCC;
 
     .topic {
         position: relative;
@@ -1101,6 +1100,7 @@
         &:focus {
             color: $blue;
             text-decoration: underline;
+            outline: none;
         }
     }
 
@@ -1134,6 +1134,8 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
         .topic-title {
             font-size: 16px;
@@ -1161,6 +1163,50 @@
         }
     }
 }
+
+.forum-list {
+    .group-title {
+        width: 100%;
+        height: 50px;
+        margin-top: 30px !important;
+        clear: both;
+        border-bottom: 1px solid #CCC;
+    }
+
+    .topic {
+        height: 60px;
+    }
+    .topic-description {
+        padding-left: 1.5%;
+    }
+    .topic-answers {
+        padding-top: 17px;
+
+        span {
+            display: block;
+            float: left;
+            width: 50%;
+        }
+    }
+    .topic-last-answer {
+        width: 18%;
+
+        .topic-no-last-answer {
+            margin-top: 15px;
+        }
+        .forum-last-message {
+            color: #777;
+            display: block;
+        }
+        .forum-last-message-title {
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+    }
+}
+
 
 
 /* ==============
