--- a/templates/forum/includes/forums.part.html
+++ b/templates/forum/includes/forums.part.html
@@ -4,47 +4,39 @@
 
 
 
-<div class="content-wrapper">
-    {% for forum in category.get_forums %}
-        {% if forum|readable:user %}
-            <div class="forum-entry-title {% if user.is_authenticated and not forum.is_read %}unread{% endif %}">
-                <h3>
-                    <a href="{{ forum.get_absolute_url }}">{{ forum.title }}</a>
-                </h3>
-                <p>
+{% for forum in category.get_forums %}
+    {% if forum|readable:user %}
+        <div class="topic navigable-elem">
+            <div class="topic-description {% if user.is_authenticated and not forum.is_read %}unread{% endif %}">
+                <h4 class="topic-title">
+                    <a href="{{ forum.get_absolute_url }}" class="navigable-link">
+                        {{ forum.title }}
+                    </a>
+                </h4>
+                <p class="topic-subtitle">
                     {{ forum.subtitle }}
                 </p>
             </div>
-            <div class="forum-entry-count">
+            <p class="topic-answers">
                 <span title="Nombre de sujets dans le forum">
                     {{ forum.get_topic_count }}
                 </span>
                 <span title="Nombre de messages dans le forum">
                     {{ forum.get_post_count }}
                 </span>
-            </div>
-            <div class="forum-entry-count">
-
-            </div>
-            <div class="forum-entry-desc">
-                <p>
-                    {% with last_message=forum.get_last_message %}
-                        {% if last_message %}
-                            <a href="{{ last_message.get_absolute_url }}">
-                                {{ last_message.pubdate|naturaltime|capfirst }}
-                            </a>
-                            par
-                            {% include "misc/member_item.part.html" with member=last_message.author %}
-                            dans
-                            <a href="{{ last_message.topic.get_absolute_url }}">
-                                {{ last_message.topic.title }}
-                            </a>
-                        {% else %}
-                            Aucun message
-                        {% endif %}
-                    {% endwith %}
-                </p>
-            </div>
-        {% endif %}
-    {% endfor %}
-</div>
+            </p>
+            <p class="topic-last-answer">
+                {% with last_message=forum.get_last_message %}
+                    {% if last_message %}
+                        <a href="{{ last_message.get_absolute_url }}">
+                            <span class="forum-last-message">Dernier message :</span>
+                            <span class="forum-last-message-title">{{ last_message.topic.title }}</span>
+                        </a>
+                    {% else %}
+                        <span class="topic-no-last-answer">Aucun sujet</span>
+                    {% endif %}
+                {% endwith %}
+            </p>
+        </div>
+    {% endif %}
+{% endfor %}
