Fix subforum list design integration

--- a/templates/forum/category/index.html
+++ b/templates/forum/category/index.html
@@ -20,5 +20,7 @@
 
 
 {% block content %}
-    {% include "forum/includes/forums.part.html" %}
+	<div class="content-wrapper topic-list forum-list navigable-list">
+	    {% include "forum/includes/forums.part.html" %}
+	</div>
 {% endblock %}
