--- a/templates/forum/includes/forums.part.html
+++ b/templates/forum/includes/forums.part.html
@@ -8,14 +8,14 @@
     {% if forum|readable:user %}
         <div class="topic navigable-elem">
             <div class="topic-description {% if user.is_authenticated and not forum.is_read %}unread{% endif %}">
-                <h4 class="topic-title">
-                    <a href="{{ forum.get_absolute_url }}" class="navigable-link">
-                        {{ forum.title }}
-                    </a>
-                </h4>
-                <p class="topic-subtitle">
-                    {{ forum.subtitle }}
-                </p>
+                <a href="{{ forum.get_absolute_url }}" class="navigable-link">
+                    <h4 class="topic-title">
+                            {{ forum.title }}
+                    </h4>
+                    <span class="topic-subtitle">
+                        {{ forum.subtitle }}
+                    </span>
+                </a>
             </div>
             <p class="topic-answers">
                 <span title="Nombre de sujets dans le forum">
