--- a/templates/misc/member_item.part.html
+++ b/templates/misc/member_item.part.html
@@ -3,7 +3,7 @@
 
 
 {% with profile=member|profile %}
-    <a href="{{ member.get_absolute_url }}">{% spaceless %}
+    <a href="{{ member.get_absolute_url }}" class="member-item">{% spaceless %}
     	{% if avatar %}
         	<img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
     	{% endif %}
