Ajout des propositions/corrections proposées par firm1

--- a/templates/gallery/edit_image.html
+++ b/templates/gallery/edit_image.html
@@ -31,7 +31,7 @@
 </div>
 <p>
     <strong>Code markdown d'insertion de l'image :</strong> <br>
-    ![{{ image.legend }}]({{ image.physical.url }})
+    <input type="text" value="![{{ image.legend }}]({{ image.physical.url }})" readonly >
 </p>
 
 {% endblock %}
