--- a/templates/tutorial/edit_tutorial.html
+++ b/templates/tutorial/edit_tutorial.html
@@ -34,7 +34,7 @@
                     <input type="text" name="author" placeholder="Nom de l'utilisateur à ajouter…" />
                 </div>
                 <div class="small-2 columns">
-                    <button type="submit" class="button" name="add_author">
+                    <button type="submit" class="button tiny" name="add_author">
                         Ajouter
                     </button>
                 </div>
